--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,10 +1,3 @@
-Size.profileForm.twitterHandle=Podaj swój identyfikator Twitter
-Email.profileForm.email=Podaj poprawny adres e-mail
-NotEmpty.profileForm.email=Podaj adres e-mail
-PastLocalDate.profileForm.birthDate=Podaj poprawną datę urodzenia
-NotNull.profileForm.birthDate=Podaj datę urodzenia
-typeMismatch.birthDate=Błędna data urodzenia
-
 NotEmpty.profileForm.tastes=Wypełnij przynajmniej jedno pole
 profile.title=Twój profil
 twitter.handle=Identyfikator Twitter
@@ -15,3 +8,13 @@ remove=Usuń
 taste.placeholder=Wpisz słowo kluczowe
 add.taste=Dodaj preferencję
 submit=Wyślij
+
+Size.profileForm.twitterHandle=Podaj swój identyfikator Twitter
+Email.profileForm.email=Podaj poprawny adres e-mail
+NotEmpty.profileForm.email=Podaj adres e-mail
+PastLocalDate.profileForm.birthDate=Podaj poprawną datę urodzenia
+NotNull.profileForm.birthDate=Podaj datę urodzenia
+typeMismatch.birthDate=Błędna data urodzenia
+
+upload.io.exception=Podczas ładowania pliku wystąpił błąd. Spróbuj jeszcze raz.
+upload.file.too.big=Plik jest za duży.
