--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -7,6 +7,7 @@ tastes.legend=What do you like?
 remove=Remove
 taste.placeholder=Enter a keyword
 add.taste=Add taste
+upload=Upload
 submit=Submit
 
 Size.profileForm.twitterHandle=Please type in your Twitter user name
