--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -7,6 +7,7 @@ tastes.legend=Co lubisz?
 remove=Usuń
 taste.placeholder=Wpisz słowo kluczowe
 add.taste=Dodaj preferencję
+upload=Załaduj
 submit=Wyślij
 
 Size.profileForm.twitterHandle=Podaj swój identyfikator Twitter
