--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -10,6 +10,8 @@ add.taste=Add taste
 upload=Upload
 submit=Submit
 
+menu.profile=Profile
+
 Size.profileForm.twitterHandle=Please type in your Twitter user name
 Email.profileForm.email=Please specify a valid email address
 NotEmpty.profileForm.email=Please specify your email address
