--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -10,6 +10,8 @@ add.taste=Dodaj preferencję
 upload=Załaduj
 submit=Wyślij
 
+menu.profile=Twój profil
+
 Size.profileForm.twitterHandle=Podaj swój identyfikator Twitter
 Email.profileForm.email=Podaj poprawny adres e-mail
 NotEmpty.profileForm.email=Podaj adres e-mail
