new user login form

--- a/bin/messages_en.properties
+++ b/bin/messages_en.properties
@@ -11,6 +11,7 @@ upload=Upload
 submit=Submit
 
 menu.profile=Profile
+menu.login=Login
 
 Size.profileForm.twitterHandle=Please type in your Twitter user name
 Email.profileForm.email=Please specify a valid email address
