--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -11,6 +11,7 @@ upload=Załaduj
 submit=Wyślij
 
 menu.profile=Twój profil
+menu.login=Zaloguj
 
 Size.profileForm.twitterHandle=Podaj swój identyfikator Twitter
 Email.profileForm.email=Podaj poprawny adres e-mail
